Ajusta débitos técnicos.